# Rust_serverless_v2

./: Cargo.toml
src/: main.rs
