[package]
name = "rust_spike_v2"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.4.1"
serde = "1.0.130"
serde_json = "1.0.69"
tokio = "1.13.0"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
